--- a/package.json
+++ b/package.json
@@ -8,45 +8,45 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.1",
-    "@emailjs/browser": "^3.7.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@hrwg/vue-marked": "^0.0.2",
-    "@vue/apollo-composable": "^4.0.0-beta.1",
-    "@vue/apollo-option": "^4.0.0-alpha.20",
-    "apollo-boost": "^0.4.9",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-http": "^1.5.17",
-    "axios": "^1.1.3",
-    "destyle.css": "^3.0.2",
-    "graphql": "^15.8.0",
-    "graphql-tag": "^2.12.6",
-    "gsap": "^3.11.5",
-    "lodash": "^4.17.21",
-    "marked": "^4.2.3",
-    "vue": "^3.2.41",
-    "vue-apollo": "^3.1.0",
-    "vue-router": "^4.1.5",
-    "vuex": "^4.0.2",
-    "vuex-persist": "^3.1.3"
+    "@apollo/client": "3.7.1",
+    "@emailjs/browser": "3.7.0",
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-brands-svg-icons": "6.2.0",
+    "@fortawesome/free-regular-svg-icons": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
+    "@fortawesome/vue-fontawesome": "3.0.1",
+    "@hrwg/vue-marked": "0.0.2",
+    "@vue/apollo-composable": "4.0.0-beta.1",
+    "@vue/apollo-option": "4.0.0-alpha.20",
+    "apollo-boost": "0.4.9",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
+    "apollo-link": "1.2.14",
+    "apollo-link-http": "1.5.17",
+    "axios": "1.1.3",
+    "destyle.css": "3.0.2",
+    "graphql": "15.8.0",
+    "graphql-tag": "2.12.6",
+    "gsap": "3.11.5",
+    "lodash": "4.17.21",
+    "marked": "4.2.3",
+    "vue": "3.2.41",
+    "vue-apollo": "3.1.0",
+    "vue-router": "4.1.5",
+    "vuex": "4.0.2",
+    "vuex-persist": "3.1.3"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.26.0",
-    "eslint-plugin-vue": "^9.6.0",
-    "prettier": "^3.1.0",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.1.0",
-    "slugify": "^1.6.5",
-    "typescript": "^5.3.2",
-    "vite": "^3.1.8"
+    "@rushstack/eslint-patch": "1.1.4",
+    "@vitejs/plugin-vue": "3.1.2",
+    "dotenv": "16.0.3",
+    "eslint": "8.26.0",
+    "eslint-plugin-vue": "9.6.0",
+    "prettier": "3.1.0",
+    "sass": "1.55.0",
+    "sass-loader": "13.1.0",
+    "slugify": "1.6.5",
+    "typescript": "5.3.2",
+    "vite": "3.1.8"
   }
 }
